--- a/boundary/reviewer_viewDetailUpdatePaperPage.html
+++ b/boundary/reviewer_viewDetailUpdatePaperPage.html
@@ -274,6 +274,7 @@
             </div>
         </div>
     </div>
+	<!-- <form method="post" action="reviewer_viewPaperDetail.php">-->
     <div class="modal fade" id="reviewer_editPaperModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -297,11 +298,13 @@
                     </div>
                     <p class="searchLeft ">reviewer name</p>
                     <div class="detail ">
-                        <label id="reviewer_editreviewerName"></label>
+                        <label id="reviewer_editreviewerName">
+							<?php $stmt->execute(); echo $stmt->fetch()["bidWinner"];?>
+						</label>
                     </div>
                     <p class="searchLeft ">Enter review</p>
                     <div class="detail ">
-                        <textarea id="reviewer_editReview" rows="10" cols="30"></textarea>
+                        <textarea name="review" id="reviewer_editReview" rows="10" cols="30"></textarea>
                     </div>
                     <br>
                     <p class=" searchLeft ">Select rating </p>
@@ -347,6 +350,7 @@
             </div>
         </div>
     </div>
+	<!-- </form>-->
     <div class="modal fade" id="saveModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true" style="z-index:1060">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
