--- a/idkWhatImDoing/lala.html
+++ b/idkWhatImDoing/lala.html
@@ -19,9 +19,17 @@
         </form>
 		
 		<form method="post" action="lala.php">
-          <!-- Name: <input type="text" name="fname"> -->
+          Name: <input type="text" name="lname">
           <button name="fname" value="lala123">lala123</button>
         </form>
+		
+		<form method="post" action="lala.php">
+          Name: <input type="text" name="lname">
+          <button name="fname" value="lala123">lala123</button>
+		  
+		  <textarea name="review" ></textarea>
+		  <input type="submit" name="fname" value="person2">
+        </form> 
 
 		<?php
 		echo $testVar_1;
