--- a/boundary/reviewer_profilePage.html
+++ b/boundary/reviewer_profilePage.html
@@ -28,7 +28,6 @@
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
         <!-- Preloader -->
-		
         <div class="preloader flex-column justify-content-center align-items-center">
             <!-- <img class="animation__shake" src="dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60"> -->
         </div>
@@ -68,7 +67,7 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex" id="platform_name">
                     <span class="platform_name brand-image-xs logo-xl">
-                        Reviewer Platform
+                        Reviewer Patform
                     </span>
                     <span class="platform_name brand-image-xl logo-xs" id="platformShort_name">
                         Rev
@@ -88,7 +87,7 @@
                             </a>
                         </li> -->
                         <li class="nav-item active">
-                            <a href="../boundary/reviewer_viewPaper.php" class="nav-link">
+                            <a href="reviewer_viewPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View paper
@@ -106,7 +105,7 @@
 
                         </li> -->
                         <li class="nav-item active">
-                            <a href="reviewer_viewBid.php" class="nav-link">
+                            <a href="reviewer_viewBidPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View bid
@@ -115,7 +114,7 @@
                         </li>
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
-                            <a href="reviewer_profile.php" class="nav-link ">
+                            <a href="reviewer_profilePage.html" class="nav-link ">
                                 <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
@@ -148,7 +147,7 @@
                         <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Personal Profile</p>
                     </div>
                     <div id="settings" style="padding: 30px;">
-                        <form class="form-horizontal" method="post" action="reviewer_profile.php">
+                        <form class="form-horizontal">
                             <!--<div class="form-group row">
                                 <label for="NRIC" class="col-sm-2 col-form-label">NRIC:</label>
                                 <div class="col-sm-4">
@@ -160,14 +159,13 @@
                                 <label for="inputPassword" class="col-sm-2 col-form-label">Password:</label>
                                 <div class="col-sm-4">
                                     <!-- retrieve reviewer password -->
-                                    <input type="password" class="form-control" id="reviewer_profilePassword" name="password">
+                                    <input type="password" class="form-control" id="reviewer_profilePassword">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="adminName" class="col-sm-2 col-form-label">Reviewer Name:</label>
                                 <div class="col-sm-4">
                                     <!-- retrieve reviewer name -->
-									<?php $stmt->execute(); echo $stmt->fetch()["account_fullName"];?>
                                     <p class="form-control" id="reviewer_profileName" style="border: none; margin-left: -10px;">
                                     </p>
                                 </div>
@@ -176,7 +174,6 @@
                                 <label for="inputSex" class="col-sm-2 col-form-label">Gender：</label>
                                 <div class="col-sm-4">
                                     <!-- retrieve reviewer gender -->
-									<?php $stmt->execute(); echo $stmt->fetch()["account_sex"];?>
                                     <p class="form-control" id="reviewer_profileGender" style="border: none; margin-left: -10px;">
                                     </p>
                                 </div>
@@ -185,27 +182,7 @@
                                 <label for="inputAge" class="col-sm-2 col-form-label">Age：</label>
                                 <div class="col-sm-4">
                                     <!-- retrieve reviewer age -->
-									<?php $stmt->execute(); echo $stmt->fetch()["account_age"];?>
                                     <p class="form-control" id="reviewer_profileAge" style="border: none; margin-left: -10px;">
-                                    </p>
-                                </div>
-                            </div>
-							<div class="form-group row">
-                                <label for="inputReviews" class="col-sm-2 col-form-label">Number of reviews：</label>
-                                <div class="col-sm-4">
-                                    <!-- retrieve  -->
-									<?php $stmt2->execute([$_SESSION["reviewer_email"]]); 
-									if ($stmt2->fetch()["numOfReviews"] == null)
-									{
-										echo "Number of recommended reviews not set yet";
-									}
-									else
-									{
-										$stmt2->execute([$_SESSION["reviewer_email"]]);
-										echo $stmt2->fetch()["numOfReviews"];
-									}
-									?>
-                                    <p class="form-control" id="reviewer_profileReviews" style="border: none; margin-left: -10px;">
                                     </p>
                                 </div>
                             </div>
@@ -213,14 +190,14 @@
                                 <label for="inputContact" class="col-sm-2 col-form-label">Contact Number:</label>
                                 <div class="col-sm-4">
                                     <!-- retrieve reviewer contact number -->
-                                    <input type="tel" class="form-control" id="reviewer_profileContact" name="number">
+                                    <input type="tel" class="form-control" id="reviewer_profileContact">
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label for="inputEmail" class="col-sm-2 col-form-label">Email:</label>
+                                <label for="inputContact" class="col-sm-2 col-form-label">Email:</label>
                                 <div class="col-sm-4">
                                     <!-- retrieve reviewer email -->
-                                    <input type="email" class="form-control " id="reviewer_profileEmail" name="email">
+                                    <input type="email" class="form-control " id="reviewer_profileEmail">
                                 </div>
                             </div>
                             <div class="form-group row">
