--- a/boundary/reviewer_viewBidPage.html
+++ b/boundary/reviewer_viewBidPage.html
@@ -87,7 +87,7 @@
                             </a>
                         </li> -->
                         <li class="nav-item active">
-                            <a href="reviewer_viewPaper.php" class="nav-link">
+                            <a href="reviewer_viewPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View paper
@@ -105,7 +105,7 @@
 
                         </li> -->
                         <li class="nav-item active">
-                            <a href="reviewer_viewBid.php" class="nav-link">
+                            <a href="reviewer_viewBidPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View bid
@@ -114,7 +114,7 @@
                         </li>
                         <li class="nav-item">
                             <hr color="#EBEFF2" style="border:1; margin-top:10px; opacity: 0.8;">
-                            <a href="reviewer_profile.php" class="nav-link ">
+                            <a href="reviewer_profilePage.html" class="nav-link ">
                                 <i class="nav-icon"><img src="../img/nav_profile_icon.svg"></i>
                                 <p class="navHeader">
                                     Profile
@@ -185,7 +185,6 @@
                                     <tr>
                                         <th>Paper ID</th>
                                         <th>Paper Name</th>
-                                        <th>Open paper</th>
                                         <th>Number of reviewer bid</th>
                                         <th>Add Bid</th>
                                         <th>Delete Bid</th>
@@ -193,12 +192,6 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-								<?php 
-								//for ($x = 0; $x < $numOfRows; $x++)
-								foreach(($stmt->fetchAll()) as $v)
-								{
-									//$stmt->execute([]);
-									echo '
                                     <tr>
                                         <td>
                                             <!-- retrieve paper id -->
@@ -206,18 +199,14 @@
                                         </td>
                                         <td>
                                             <!-- retrieve paper name -->
-											' . $v["paperName"] . '
-                                            <!-- PaperA -->
-                                        </td>
-                                        <td>
 
+                                            PaperA
                                         </td>
                                         <td>
                                             <!-- retrieve author name -->
 
                                             2
                                         </td>
-
                                         <td>
 
                                             <!-- <a href="reviewer_addBidPage.html">
@@ -237,9 +226,7 @@
                                         </td>
 
                                     </tr>
-									';
-								}
-								?>
+
                                 </tbody>
                             </table>
                         </div>
