--- a/boundary/conferenceChair_searchAllocatedPaperPage.html
+++ b/boundary/conferenceChair_searchAllocatedPaperPage.html
@@ -162,7 +162,7 @@
                                 <tr>
                                     <th>Paper ID</th>
                                     <th>Paper Name</th>
-                                    <th>Author name</th>
+                                    <th>Reviewer name</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
