--- a/boundary/conferenceChair_profilePage.html
+++ b/boundary/conferenceChair_profilePage.html
@@ -90,7 +90,7 @@
                             <a href="conferenceChair_searchAllocatedPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
-                                    Search allocated paper
+                                    View allocated paper
                                 </p>
                             </a>
                         </li>
@@ -98,7 +98,7 @@
                             <a href="conferenceChair_searchPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
-                                    Search paper
+                                    View paper
                                 </p>
                             </a>
                         </li>
