--- a/boundary/conferenceChair_searchAllocatedPaperPage.html
+++ b/boundary/conferenceChair_searchAllocatedPaperPage.html
@@ -89,7 +89,7 @@
                             <a href="conferenceChair_searchAllocatedPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
-                                    Search allocated paper
+                                    View allocated paper
                                 </p>
                             </a>
                         </li>
@@ -97,7 +97,7 @@
                             <a href="conferenceChair_searchPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
-                                    Search paper
+                                    View paper
                                 </p>
                             </a>
                         </li>
@@ -142,16 +142,17 @@
                         <div style="float:left;width: 3px;height: 28px; background: #109CF1;"></div>
                         <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">Search allocated paper</p>
                     </div>
+                    <!-- 
 
                     <div class="card-body">
                         <div>
                             <p class="searchLeft">Enter paper name: </p>
-                            <!-- search User ID -->
+                           //search User ID 
                             <input type="search" id="author_searchEnterAllocatedPaperName" class="form-control form-control-lg">
                             <button type="submit" class="btn btn-outline-primary search_button">search</button>
                         </div>
 
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-12">
@@ -227,7 +228,7 @@
             $('#conferenceChair_searchAllocatedPaper').DataTable({
                 "paging": true,
                 "lengthChange": true,
-                "searching": true,
+                "searching": false,
                 "ordering": true,
                 "info": true,
                 "autoWidth": true,
