--- a/boundary/conferenceChair_viewDetailAllocatedPaperPage.html
+++ b/boundary/conferenceChair_viewDetailAllocatedPaperPage.html
@@ -97,7 +97,7 @@
                             <a href="conferenceChair_searchPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
-                                    Search paper
+                                    View paper
                                 </p>
                             </a>
                         </li>
@@ -105,7 +105,7 @@
                             <a href="conferenceChair_sendEmailPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/email.png"></i>
                                 <p class="navHeader">
-                                    Send email
+                                    View email
                                 </p>
                             </a>
                         </li>
