--- a/boundary/conferenceChair_viewPaperPage.html
+++ b/boundary/conferenceChair_viewPaperPage.html
@@ -89,7 +89,7 @@
                             <a href="conferenceChair_searchAllocatedPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
-                                    Search allocated paper
+                                    View allocated paper
                                 </p>
                             </a>
                         </li>
@@ -97,7 +97,7 @@
                             <a href="conferenceChair_searchPaperPage.html" class="nav-link">
                                 <i class="nav-icon"><img src="../img/search.svg"></i>
                                 <p class="navHeader">
-                                    Search paper
+                                    View paper
                                 </p>
                             </a>
                         </li>
