--- a/idkWhatImDoing/lala.html
+++ b/idkWhatImDoing/lala.html
@@ -22,6 +22,13 @@
           <!-- Name: <input type="text" name="fname"> -->
           <button name="fname" value="lala123">lala123</button>
         </form>
+		
+		<form method="post" action="lala.php">
+          Name: <input type="text" name="rating">
+		  <textarea name="review" ></textarea>
+          <button name="fname" value="lala123">lala123</button>
+		  <input type="submit" name="lname" value="person2">
+        </form>
 
 		<?php
 		echo $testVar_1;
