--- a/boundary/reviewer_profilePage.html
+++ b/boundary/reviewer_profilePage.html
@@ -106,8 +106,8 @@
 
                         </li> -->
                         <li class="nav-item active">
-							<a href="../controller/reviewerViewBidController.php" class="nav-link">
-                            <!-- <a href="reviewer_viewBid.php" class="nav-link"> -->
+							<!-- <a href="../controller/reviewerViewBidController.php" class="nav-link"> -->
+                            <a href="reviewer_viewBid.php" class="nav-link">
                                 <i class="nav-icon"><img src="../img/nav_record_icon.svg"></i>
                                 <p class="navHeader">
                                     View bid
