--- a/boundary/reviewer_viewDetailUpdatePaperPage.html
+++ b/boundary/reviewer_viewDetailUpdatePaperPage.html
@@ -144,7 +144,10 @@
                     <div class="card-body">
                         <div class="card-header" style="padding-top: 0; padding-bottom: 20px; padding-top: 20px; background-color: white;">
                             <div style="float:left;width: 3px;height: 28px; background: #109CF1;"></div>
-                            <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">View paper detail</p>
+                            <p style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">View paper detail:</p>
+							<a href="<?php echo $linkVar; ?>" target="_blank" style="font-size:20px; color: black;margin-top: 25px; margin-left: 10px; display: inline;">
+							<?php echo $linkVar; ?></a>
+							
                         </div>
                         <div class="card-body">
                             <div class="row">
