remove echo text display

--- a/boundary/reviewer_viewPaperPage.html
+++ b/boundary/reviewer_viewPaperPage.html
@@ -272,9 +272,9 @@
 
         $(document).ready(function() {
             $('#reviewer_viewPaper').DataTable({
-                "paging": true,
+                "paging": false,
                 "lengthChange": true,
-                "searching": true,
+                "searching": false,
                 "ordering": true,
                 "info": true,
                 "autoWidth": true,
