removed add review and rating

--- a/boundary/reviewer_viewPaperPage.html
+++ b/boundary/reviewer_viewPaperPage.html
@@ -171,7 +171,7 @@
                                     <th>Paper ID</th>
                                     <th>Paper Name</th>
                                     <th>Author name</th>
-                                    <th>Add review & rating</th>
+                                    <!-- <th>Add review & rating</th> -->
                                     <th>View review & rating Update</th>
 
                                 </tr>
@@ -218,13 +218,13 @@
 												value="'; echo $authorNames; echo '">
 											<!-- author -->
 										</td> 
-										<td>
+										<!-- <td>
 											<a href="../boundary/reviewer_addRatingReviewPage.html">
 												<button type="button" class="detail_action_btn">
 												Add
 											</button>
 											</a>
-										</td>
+										</td> -->
 										<td>
 											
 											  <button name="lala" value="" 
