--- a/boundary/reviewer_commentOthersReview.html
+++ b/boundary/reviewer_commentOthersReview.html
@@ -145,21 +145,29 @@
                     <div class="card" style="margin-top: 20px;">
                         <div class="card-body">
                             <div class="modal-header">
-                                <img style="margin-left: 10px; margin-top: 20px" src="../img/blue arrow.svg" data-dismiss="modal" aria-label="Close"></i>
-                                <p style="font-size:20px; color: #109CF1;margin-top: 15px; margin-left: 15px; display: inline;">Edit Paper Details</p>
+                                <p style="font-size:20px; color: #109CF1;margin-top: 15px; margin-left: 15px; display: inline;">add comment</p>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                             </div>
                             <div class="modal-body ">
-                                <p>Review ID:&nbsp;</p>
+                                <p class="searchLeft">Main review :&nbsp;</p>
                                 <div class="detail ">
                                     <!-- get paperID from DB-->
-                                    <label id="reviewer_commentReviewID "></label>
+                                    <label id="reviewer_mainReview"></label>
                                 </div>
-                                <p class="searchLeft ">Review detail</p>
+                                <p class="searchLeft">Main rating</p>
                                 <div class="detail ">
-                                    <label id="reviewer_commentReviewDetail"></label>
+                                    <label id="reviewer_mainRating"></label>
+                                </div>
+                                <p class="searchLeft">Other review :&nbsp;</p>
+                                <div class="detail ">
+                                    <!-- get paperID from DB-->
+                                    <label id="reviewer_otherReview"></label>
+                                </div>
+                                <p class="searchLeft">Other rating</p>
+                                <div class="detail ">
+                                    <label id="reviewer_otherRating"></label>
                                 </div>
                                 <p class="searchLeft ">Enter comment</p>
                                 <div class="detail ">
